# rules_pyo3

./: BUILD.bazel  WORKSPACE  build_defs.bzl  defs.bzl  repos.bzl
cargo/: BUILD.bazel  Cargo.toml  crates.bzl
cargo/cargo/: BUILD.bazel
cargo/remote/: BUILD.cloudabi-0.1.0.bazel  BUILD.ctor-0.1.16.bazel  BUILD.ghost-0.1.2.bazel  BUILD.indoc-1.0.3.bazel  BUILD.instant-0.1.8.bazel  BUILD.instant-0.1.9.bazel  BUILD.inventory-0.1.10.bazel  BUILD.inventory-0.1.9.bazel  BUILD.inventory-impl-0.1.10.bazel  BUILD.inventory-impl-0.1.9.bazel  BUILD.lock_api-0.4.1.bazel  BUILD.lock_api-0.4.2.bazel  BUILD.parking_lot-0.11.0.bazel  BUILD.parking_lot-0.11.1.bazel  BUILD.parking_lot_core-0.8.0.bazel  BUILD.parking_lot_core-0.8.1.bazel  BUILD.proc-macro2-1.0.24.bazel  BUILD.pyo3-0.12.3.bazel  BUILD.pyo3-0.12.4.bazel  BUILD.pyo3-derive-backend-0.12.3.bazel  BUILD.pyo3-derive-backend-0.12.4.bazel  BUILD.pyo3cls-0.12.3.bazel  BUILD.pyo3cls-0.12.4.bazel  BUILD.quote-1.0.7.bazel  BUILD.scopeguard-1.1.0.bazel  BUILD.syn-1.0.48.bazel  BUILD.syn-1.0.54.bazel  BUILD.winapi-0.3.9.bazel
examples/: WORKSPACE
